# frequency-estimation

./: .gitignore  README.md
matlab/: README.md
matlab/src/: run_frequency_estimation.m  startup.m
matlab/src/config/: config.m
matlab/src/core/: compute_filter_output.m  compute_frequency_response.m  compute_gradient.m  compute_mse.m  find_initial_theta.m  run_lms_algorithm.m
matlab/src/utils/: add_awgn.m  freq_to_theta.m  generate_test_signal.m  mag_to_db.m  save_results.m  theta_to_freq.m
matlab/src/visualization/: plot_filter_signals.m  plot_frequency_response.m  plot_frequency_tracking.m  plot_mse_analysis.m
output/: frequency_estimation_20260109_133022.mat  frequency_estimation_20260109_133022_summary.txt  frequency_estimation_20260113_181521.npz  frequency_estimation_20260113_181521_summary.txt
python/: README.md  pyproject.toml
python/src/frequency_estimation/: __init__.py  config.py  estimator.py  run.py
python/src/frequency_estimation/core/: __init__.py  filter_output.py  frequency_response.py  gradient.py  initial_theta.py  lms.py  mse.py
python/src/frequency_estimation/filters/: __init__.py  filter_bank.py  notch_filter.py
python/src/frequency_estimation/signal/: __init__.py  generator.py
python/src/frequency_estimation/utils/: __init__.py  conversions.py  signal.py
python/src/frequency_estimation/visualization/: __init__.py  plots.py  plotter.py
scripts/: create_visualizations.py
src/: run_frequency_estimation.m  startup.m
src/config/: config.m  default_config.m  load_config.m  save_config.m
src/core/: compute_filter_output.m  find_initial_theta.m
src/utils/: add_awgn.m  generate_test_signal.m  mag_to_db.m
src/visualization/: plot_filter_signals.m  plot_frequency_response.m  plot_frequency_tracking.m  plot_mse_analysis.m
tests/: regression_test.py
